...
            android:inputType="textUri"
            app:layout_constraintEnd_toEndOf="@+id/barBeforeMs"
            app:layout_constraintStart_toEndOf="@+id/barAfterAllTextLabels"
            app:layout_constraintTop_toBottomOf="@+id/etRunEveryMs" />

        <EditText
            android:id="@+id/etFields"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@null"
...
